[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-monitor"
version = "0.1.0"
description = "Terminal dashboard for Claude Code developers — system monitoring + usage tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Agam Arora", email = "agam.arora11@gmail.com"}]
keywords = ["claude", "monitor", "terminal", "dashboard", "system", "gpu", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.0"]
temps = ["wmi>=1.5"]

[project.scripts]
luna-monitor = "luna_monitor.__main__:main"
luna-proxy = "luna_monitor.proxy.cli:main"

[project.urls]
Homepage = "https://github.com/agamarora/utils"
Repository = "https://github.com/agamarora/utils/tree/main/luna-monitor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
