[package]
name = "luna-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luna-monitor"
path = "src/main.rs"

[dependencies]
luna-common = { path = "../luna-common" }
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
chrono = "0.4"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"

[features]
default = []
gpu = ["dep:nvml-wrapper"]

[dependencies.nvml-wrapper]
version = "0.10"
optional = true
