[package]
name = "luna-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "luna-proxy"
path = "src/main.rs"

[dependencies]
luna-common = { path = "../luna-common" }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
